fix overlap if no TOC exists

--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.15
+@version     1.0.16
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -409,7 +409,12 @@ html {
   .client-js .vector-below-page-title .vector-page-titlebar-toc {
     top: 82px !important;
   }
+/* Nudge title down if no TOC exists */
+  .vector-toc-not-available .firstHeading {
+    padding-top: 20px !important;
+  }
 }
+
 
 /* Reduce ToC height for logged-out view 
 #vector-toc {
